2011-07-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdialogs.R (gbasicdialog): Added do.buttons option to
	constructor (passed through ... of constructor). Added dispose
	method to delete dialog.

2011-07-20  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckboxgrouptable.R: added (hacked) gcheckboxgroup with
	use.table option. Needs better images, along with button enter,
	but is working

	* R/aaaR5classes.R: added base gComponentR5tcltk methods, factored
	out similar ones in child classes

2011-07-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R: fix to handler to open new values (use W not tr global)

	* R/gtable.R (.populateTable): clean up this function

2011-07-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R: worked on size issue of this widget. Cross my fingers...

2011-07-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* DESCRIPTION (Version): version bump (45)

	* R/gcalendar.R: fixed gcalendar. It had issues when used within glayout.b

	* R/aaaR5classes.R: fix to gradio if items is logical

	* R/aaaGenerics.R: added ".add" method for tkwin objects. This
	allows tk widgets to be embedded. Eg.,:
	g = ggroup(cont=gwindow())
	library(tkrplot)
	l = tkrplot(getToolkitWidget(g), function() hist(rnorm(100)))
	add(g, l)

2011-07-11  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gspinbutton.R: Big change. Went to R5 widget to  use "command"
	for the handler, rather than hacking. This is an issue though --
	doesn't work well with the Mac, exposing a bug that can be
	triggered by the following tcltk code:

	w <- tktoplevel()
	s <- tkwidget(w, "spinbox", from=0, to=10, increment=1)
	tkpack(s)
	tkconfigure(s, "command"=function(...) print("hi"))
	tcl(s, "set", 5L)
	## clicking on spinbutton can cause continuous invoking of widget
	## until focus is on spinbutton

	This might be fixed by 8.5.9 -- which has a ttk::spinbox, but